Changes for Gapp::App

0.01.0 (ALPHA) Aug 16 2012
- Created Gapp::App::Debug library