@@ -1,7 +1,7 @@
 
 
 This archive contains the distribution Gapp-App,
-version 0.001:
+version 0.002:
 
   Build Gapp applications from components
 
